# python3-embedded-example

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  test-installer.yml
app/: CMakeLists.txt  main.cpp
cmake/: rpath.cmake
python3interpeter/: CMakeLists.txt
python3interpeter/PyScripts/: calc.py
python3interpeter/include/python3interpreter/: pythoninterpreter.h  pythoninterpreterdefines.h
python3interpeter/src/: embeddedmoduleexample.cpp  pythoninterpreter.cpp
